# Labs_2-nd_year

./: .gitignore  README.md
JavaLabs/Lab1/: README.md  biblia.txt  test.csv
JavaLabs/Lab1/personal/bakunevich/: CounterWord.java  Word.java  WordReader.java  WordWriter.java  hello.java
JavaLabs/Lab2/: README.md  textIn.txt  textOut.txt
JavaLabs/Lab2/resources/personal/bakunevich/: commands.properties  commands.propirties
JavaLabs/Lab2/src/personal/bakunevich/: CalculateExecuter.java  CalculateExecutor.java  Calculator.java  Command.java  CommandContext.java  Factory.java  ICommandContext.java  IFactory.java  MainStack.java  Writer.java  (+2 more)
JavaLabs/Lab3/AndroidGame/app/: build.gradle
JavaLabs/Lab3/Game/: README.md
LaboratoryWorks/Lab_1/: .bazelrc  README.md  gmock.BUILD
LaboratoryWorks/Lab_1/main/: BUILD  circular_buffer.cpp  circular_buffer.h  circular_buffer.inl  main.cpp
LaboratoryWorks/Lab_1/tests/: BUILD  buffer_tests.cpp
LaboratoryWorks/Lab_2/: CMakeLists.txt  README.md  WORKSPACE
LaboratoryWorks/Lab_2/graphics/: BUILD  commands.h  visualizer.cpp  visualizer.h  window.cpp  window.h
LaboratoryWorks/Lab_2/main/: BUILD  element.h  main.cpp
LaboratoryWorks/Lab_3/: README.md  WORKSPACE
LaboratoryWorks/Lab_3/game/: Ball.cpp  Ball.hpp  Block.hpp  BlocksField.cpp  BlocksField.hpp  Game.cpp  Game.hpp  GlobalObjects.cpp  GlobalObjects.hpp  Paddle.cpp  Paddle.hpp  Score.cpp  Score.hpp  main.cpp
LaboratoryWorks/Lab_4/: BUILD  CMakeLists.txt  README.md  main.cpp  test.cvs  test.txt
LaboratoryWorks/Lab_4/CSV_Parser/: BUILD  csv_parser.h  iter.h  tuple.h
(+54 files in other folders)
